<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/login_RootView"
    tools:context=".presentation.activities.LoginActivity">


    <ImageView
        android:id="@+id/iv_login_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"/>

    <ProgressBar
        android:id="@+id/pb_login_loading"
        android:visibility="invisible"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_width="50dp"
        android:layout_height="50dp" />

    <LinearLayout
        android:id="@+id/ll_login_screen"
        android:visibility="visible"
        android:layout_margin="40dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_login_username"
            android:textCursorDrawable="@null"
            android:textColorHint="@color/loginHintColor"
            android:layout_width="250dp"
            android:layout_marginBottom="15dp"
            android:layout_height="40dp"
            android:textColor="@color/textColor"
            android:background="@drawable/login_edittext_color"
            android:hint="@string/username"/>

        <EditText
            android:id="@+id/et_login_password"
            android:textCursorDrawable="@null"
            android:layout_width="250dp"
            android:textColorHint="@color/loginHintColor"
            android:textColor="@color/textColor"
            android:inputType="textPassword"
            android:layout_height="40dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/login_edittext_color"
            android:hint="@string/password"/>

        <CheckBox
            android:id="@+id/cb_remember_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rememberme"
            android:textSize="12sp"
            android:theme="@android:style/Theme.Holo"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_login_register"
                android:layout_margin="5dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:background="@drawable/login_button_color"/>

            <Button
                android:id="@+id/btn_login_login"
                android:layout_margin="5dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:background="@drawable/login_button_color"/>

        </LinearLayout>




    </LinearLayout>



</FrameLayout>