<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.activities.DetailActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="300dp">

            <ImageView
                android:id="@+id/iv_detail_movie_backdrop"
                android:contentDescription="@string/contentDescription"
                android:scaleType="matrix"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <ImageView
                android:contentDescription="@string/contentDescription"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/gradient"/>

            <Button
                android:id="@+id/view_detail_backbutton"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_arrow_back_black_24dp" />

            <LinearLayout
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="bottom">


                <!-- Title, options -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_detail_movie_title"
                        android:layout_width="0dp"
                        android:textColor="@color/textColor"
                        android:layout_weight="1"
                        android:text="Default"
                        android:layout_height="wrap_content"
                        android:paddingBottom="15dp"
                        android:textSize="25sp"/>

                    <!-- temp -->
                    <Button
                        android:id="@+id/btn_detail_options"
                        android:paddingStart="0dp"
                        android:paddingEnd="0dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/actionColor"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:text="@string/vertical_ellipsis"
                        android:textSize="30sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_detail_movie_year"
                        android:textColor="@color/softTextColor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="  "/>

                    <TextView
                        android:id="@+id/tv_detail_movie_runtime"
                        android:textColor="@color/softTextColor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="  "/>

                    <TextView
                        android:id="@+id/tv_detail_movie_genre"
                        android:textColor="@color/softTextColor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </LinearLayout>

        </FrameLayout>

        <TextView
            android:id="@+id/tv_detail_movie_status"
            android:textColor="@color/textColor"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight=".2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="?android:attr/listDivider" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="5">
            <TextView
                android:id="@+id/tv_detail_movie_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor" />
        </ScrollView>



        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center_horizontal">

            <com.google.android.youtube.player.YouTubeThumbnailView
                android:id="@+id/Trailer_Thumbnail"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"/>

            <com.google.android.youtube.player.YouTubeThumbnailView
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:id="@+id/trailer_ThumbnailView"/>

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:clickable="false"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="48dp"
                    android:id="@+id/play_button"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:clickable="false"
                    android:contentDescription="@string/contentDescription"
                    android:src="@drawable/ic_play_arrow_black_8_12dp" />
            </LinearLayout>





        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">

            <RatingBar
                android:id="@+id/rb_detail_movie_rating"
                android:numStars="5"
                android:layout_width="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content"
                android:progressTint="@color/starColor"
                android:isIndicator="true"
                android:rating="3.6"
                style="?android:attr/ratingBarStyleIndicator"/>

            <TextView
                android:id="@+id/tv_detail_movie_avg_rating"
                android:textColor="@color/textColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="1dp" />

            <Button
                android:id="@+id/btn_detail_show_reviews"
                android:layout_width="wrap_content"
                android:textColor="@color/actionColor"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:text="@string/showReviews"
                android:textSize="12sp"/>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:contentDescription="@string/contentDescription"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        android:src="@drawable/popup_bg"
        android:id="@+id/overlay_bg_image_view"/>
</FrameLayout>